--- a/public/emails/emailTemplate.html
+++ b/public/emails/emailTemplate.html
@@ -26,7 +26,8 @@
                                 style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
                                 <tr>
                                     <td style="padding:0 0 36px 0;color:#153643;">
-                                        <h1 style="font-size:24px;margin:0 0 20px 0;font-family:Inter,sans-serif;">
+                                        <h1 id="title"
+                                            style="font-size:24px;margin:0 0 20px 0;font-family:Inter,sans-serif;">
                                             Activate account</h1>
                                         <div>
                                             <p id="greeting"
