Added dynamic email copyright year

--- a/public/emails/emailTemplate.html
+++ b/public/emails/emailTemplate.html
@@ -28,7 +28,7 @@
                                     <td style="padding:0 0 36px 0;color:#153643;">
                                         <h1 id="title"
                                             style="font-size:24px;margin:0 0 20px 0;font-family:Inter,sans-serif;">
-                                            Activate account</h1>
+                                            LuxEdge</h1>
                                         <div>
                                             <p id="greeting"
                                                 style="margin: 0; font-size: 16px; line-height: 24px; font-family: Inter, Arial, Helvetica, sans-serif;">
@@ -61,7 +61,7 @@
                                                 <td style="padding: 0; width: 50%;" align="left">
                                                     <p id="registered"
                                                         style="margin:0; font-size: 14px; line-height: 16px; font-family: Inter, Arial, Helvetica, sans-serif; color: #ffffff;">
-                                                        &reg; LuxEdge Furnitures, 2023
+                                                        &reg; LuxEdge Furnitures, <span id="year">2023</span>
                                                         <br />
                                                         <a id="unsubscribe" href="http://www.example.com"
                                                             style="color: #ffffff; text-decoration: underline">
